# oqs-cbg-pipeline

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-docs  MEMORY.md  README.md  cbg-tutorial-for-phd-students_v0.2.html  codemeta.json  conftest.py  index.html  project_dg2_blockers.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
api/: cbg.html  examples.html  genindex.html  index.html  models.html  numerical.html  objects.inv  py-modindex.html  reporting.html  search.html  searchindex.js
benchmarks/: __init__.py  exact_finite_env.py  heom_reference.py  numerical_tcl_extraction.py  path_b_floor_audit.py  qutip_reference.py
cbg/: __init__.py  basis.py  bath_correlations.py  cumulants.py  diagnostics.py  displacement_profiles.py  effective_hamiltonian.py  tcl_recursion.py
docs/: README.md  benchmark_protocol.md  do_not_cite_as.md  endorsement_marker.md  stewardship_conflict.md  validity_envelope.md
docs-site/: cbg.md  conf.py  examples.md  index.md  models.md  numerical.md  reporting.md
examples/: README.md  dg1_walkthrough.ipynb  dg2_structural.ipynb  dg3_cross_method.ipynb  dg4_walkthrough.ipynb
ledger/: CL-2026-005_v0.4.md  CL-2026-005_v0.4_council-briefing.md  CL-2026-005_v0.4_council-briefing_displacement-convention.md  CL-2026-005_v0.4_council-deliberation_2026-04-29.md  CL-2026-005_v0.4_council-deliberation_act1_2026-05-04.md  CL-2026-005_v0.4_council-deliberation_act2_2026-05-04.md  README.md
logbook/: 2026-04-29_public-site-added.md  2026-04-29_repo-init.md  2026-04-29_sail-v0.5-bump.md  2026-04-30_benchmark-card-schema-drafted.md  2026-04-30_dg-1-cards-frozen.md  2026-04-30_dg-1-pass.md  2026-05-01_dg-2-b1-card-frozen.md  2026-05-01_dg-2-b1-pass.md  2026-05-01_dg-2-b2-card-frozen.md  2026-05-01_dg-2-b3-card-frozen.md  2026-05-01_hayden-sorce-transcription-initiated.md  2026-05-01_hayden-sorce-transcription-v0.1.1-bumped.md  2026-05-04_cbg-appendix-d-transcription-populated.md  2026-05-04_dg-2-b2-pass.md  2026-05-04_dg-2-b3-pass.md  2026-05-04_dg-2-b4-conv-registry-card-frozen.md  2026-05-04_dg-2-b4-conv-registry-pass.md  2026-05-04_dg-2-b5-conv-registry-card-frozen.md  2026-05-04_dg-2-b5-conv-registry-pass.md  2026-05-04_dg-2-b5-conv-registry-v020-superseded-frozen.md  2026-05-04_dg-2-partial-envelope.md  2026-05-04_dg-2-pass-envelope.md  2026-05-05_d1-e1-runner-refusal-wired.md  2026-05-05_dg-3-4-5-scoping.md  2026-05-05_dg-3-c1-displaced-handler-wired.md  2026-05-05_dg-3-c2-displaced-handler-wired.md  2026-05-05_dg-3-c2-thermal-handler-wired.md  2026-05-05_dg-3-phase-c-runner-wired.md  2026-05-06_dg-4-pass-path-b-superseded.md  2026-05-06_dg-4-pass-path-b-v012.md  2026-05-06_dg-4-pass-path-b.md  2026-05-06_dg-4-path-b-pilot-result.md  2026-05-06_dg-4-phase-a-bis-d1-v011-supersedure.md  2026-05-06_dg-4-phase-b0-leaf-correlations.md  2026-05-06_dg-4-phase-b1-cumulant-recursion.md  2026-05-06_dg-4-phase-b2-tcl-order-3.md  2026-05-06_dg-4-phase-b3-norm-convention-clarification.md  2026-05-06_dg-4-phase-b3-partial-dissipator-extraction.md  2026-05-06_dg-4-phase-c-sweep-runner-wired.md  2026-05-11_dg-4-work-plan-v015-frozen-via-council-3.md  (+13 more)
models/: __init__.py  fano_anderson.py  jaynes_cummings.py  pure_dephasing.py  spin_boson_sigma_x.py
numerical/: __init__.py  tensor_ops.py  time_grid.py
plans/: README.md  dg-1-work-plan_v0.1.0.md  dg-1-work-plan_v0.1.1.md  dg-1-work-plan_v0.1.2.md  dg-1-work-plan_v0.1.3.md  dg-1-work-plan_v0.1.4.md  dg-3-work-plan_v0.1.0.md  dg-3-work-plan_v0.1.1.md  dg-3-work-plan_v0.1.2.md  dg-3-work-plan_v0.1.3.md  dg-4-path-b-richardson-extraction_v0.1.0.md  dg-4-work-plan_v0.1.0.md  dg-4-work-plan_v0.1.1.md  dg-4-work-plan_v0.1.2.md  dg-4-work-plan_v0.1.3.md  dg-4-work-plan_v0.1.4.md  dg-4-work-plan_v0.1.5.md
reviews/: README.md  (+2 more)
(+112 files in other folders)
